Update vendorsdk from next platform
